--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pixema",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -19,7 +19,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-use": "^17.5.1",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "vite-plugin-dts": "^4.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -38,7 +39,8 @@
     "tailwindcss": "^3.4.16",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.13.0",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-svgr": "^4.3.0"
   },
   "overrides": {
     "vite": {
